<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mains.dash.StudentDash">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardStudentDash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="10dp"
        app:contentPadding="10dp">

        <LinearLayout
            android:id="@+id/linearStudentDash"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgStudentProfile"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:src="@drawable/img_student"
                app:civ_border_color="@color/white"
                app:civ_border_width="1dp" />

            <TextView
                android:id="@+id/studentName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/background_main_profile"
                android:padding="5dp"
                android:text="@string/student_name"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/studentAdmission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="20dp"
                android:background="@drawable/background_main_profile"
                android:padding="5dp"
                android:text="@string/admission"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/studentForm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/background_main_profile"
                    android:padding="5dp"
                    android:text="@string/form_1"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/studentPoints"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/background_main_profile"
                    android:padding="5dp"
                    android:text="@string/_62_pts"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/studentGrade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/background_main_profile"
                    android:padding="5dp"
                    android:text="@string/b"
                    android:textStyle="bold" />

            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnExamResults"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_main_profile"
                android:text="@string/view_exam_results"
                android:textAllCaps="false" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnFeesPaid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_main_profile"
                android:text="@string/view_fees_paid"
                android:textAllCaps="false" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnClassTeacherDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_main_profile"
                android:text="@string/contact_class_teacher"
                android:textAllCaps="false" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>