<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".mains.dash.BursaDash">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgBursa"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/img_student"
        app:civ_border_color="@color/main_green_color"
        app:civ_border_width="1dp" />

    <TextView
        android:id="@+id/tvBursaName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/benson_gengoza"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnUpdateFees"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_main_profile"
                android:text="@string/update_student_fees"
                android:textAllCaps="true" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPostInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_main_profile"
                android:text="@string/post_information"
                android:textAllCaps="true" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnViewSchoolResults"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_main_profile"
                android:text="@string/view_school_results"
                android:textAllCaps="true" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogoutBursa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_main_profile"
                android:backgroundTint="#797761"
                android:text="@string/logout"
                android:textAllCaps="true"
                android:textColor="#FFEB3B" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>