<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="50">

        <EditText
            android:id="@+id/edtSchoolEnrolKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_main_profile"
            android:hint="@string/enter_enrollment_key"
            android:inputType="numberDecimal"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="50">

        <EditText
            android:id="@+id/edtSchoolNameReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_main_profile"
            android:hint="@string/enter_school_name"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="50">

        <EditText
            android:id="@+id/edtSchoolCodeReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_main_profile"
            android:hint="@string/enter_school_code"
            android:inputType="numberDecimal"
            android:textColor="@color/black" />




        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="50">

            <EditText
                android:id="@+id/edtSchoolPhone1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_main_profile"
                android:hint="@string/phone_number_1"
                android:inputType="numberDecimal"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="50">

            <EditText
                android:id="@+id/edtSchoolPhone2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_main_profile"
                android:hint="@string/phone_number_2"
                android:inputType="numberDecimal"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>