<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        app:cardElevation="5dp"
        app:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tvSenderNewsRetrieve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="georgia"
                android:text="@string/school_principal"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTitleNewsRetrieve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/title_retrieve_news"
                android:textSize="13sp"
                android:fontFamily="georgia"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/tvMessageNewsRetrieve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:text="@string/message_placeholder" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>