<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_main_profile"
    tools:context=".mains.dash.TeacherDash">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgTeacher"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/img_student"
        app:civ_border_color="@color/main_green_color"
        app:civ_border_width="1dp" />

    <TextView
        android:id="@+id/tvTeacherName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/teacher_teacher"
        android:textColor="@color/black"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tvTeacherClass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:fontFamily="georgia"
        android:text="@string/teacher_teacher"
        android:textColor="@color/black"
        android:textStyle="italic" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnUpdateStudentMarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_main_profile"
                android:text="@string/update_student_marks"
                android:textAllCaps="true" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPostInformationTeacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_main_profile"
                android:text="@string/post_information"
                android:textAllCaps="true" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnViewMyStudents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_main_profile"
                android:text="@string/my_students"
                android:textAllCaps="true" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogoutTeacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_main_profile"
                android:backgroundTint="#797761"
                android:text="@string/logout"
                android:textAllCaps="true"
                android:textColor="#FFEB3B" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>