<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        app:cardElevation="5dp"
        app:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvFinanceForm"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="serif-monospace"
                android:text="@string/form_1_fee_structure"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tvFinanceWholeFees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/total_fees_35000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFinanceHalf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/minimum_required_ksh_17500"
                android:textStyle="bold" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>